<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="bottom|center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:gravity="top|center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/fragment_menu_button_Journal"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_journal" />

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.23"
        android:gravity="top|center"
        android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="84dp"
        android:layout_gravity="right"
        android:onClick="imageClick"
        android:src="@drawable/on_button" />
</LinearLayout>
</LinearLayout>